<resources>
    <string name="app_name">Dine-A-Bite Stands</string>
    <string name="sign_in">Sign in</string>
    <string name="manager_dashboard">Manager Dashboard</string>
    <string name="order_text">Orders</string>
    <string name="order_1">Order #1</string>
    <string name="textview_order">TextView</string>
    <string name="start">Start</string>
    <string name="picked_up">Picked up</string>
    <string name="medium_fries">Medium Fries</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="account">Account</string>
    <string name="standname">Stand name:</string>
    <string name="brandname">Brand name:</string>
    <string name="price_text">Price: €</string>
    <string name="update_item">Update item</string>
    <string name="title_text">Title:</string>
    <string name="price_text_2">Price: €</string>
    <string name="count_text">Count:</string>
    <string name="done">Done</string>
    <string name="dine_a_bite_stands">Dine-A-Bite Stands</string>
    <string name="logo">Logo</string>
    <string name="submit">Submit</string>
    <string name="add">ADD</string>
    <string name="add_small">add</string>
    <string name="add_menu_item">Add menu item</string>
    <string name="submit_changes">Submit changes</string>
    <string name="name">Name</string>
    <string name="price_in_euro">Price in €</string>
    <string name="stock">Stock</string>
    <string name="added_stock">Added stock</string>
    <string name="account_information">Account information</string>
    <string name="brand_name">Brand name</string>
    <string name="menu_item_name">Menu item name</string>
    <string name="euro_sign">€</string>
    <string name="menu_item_price">Menu item price</string>
    <string name="in_stock">In stock:</string>
    <string name="amount_in_stock_of_menu_item">Amount in stock of menu item</string>
    <string name="hash_tag">#</string>
    <string name="name_of_menu_item">Name of menu item *</string>
    <string name="price_of_menu_item_in_euro">Price of menu item in € *</string>
    <string name="added_stock_helper_text">Number of added items to the stock (can be 0) *</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="orders">Orders</string>
    <string name="refresh">Refresh</string>
    <string name="your_orders">Your orders</string>
    <string name="order_number">Order#</string>
    <string name="description_of_menu_item">Description of menu item (optional)</string>
    <string name="description">Description</string>
    <string name="estimates_prep_time_of_item">Estimated preparation time of menu item in minutes *</string>
    <string name="preparation_time">Preparation time</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">Welcome!</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="login_failed">Login failed</string>
    <string name="username">Username</string>
    <string name="verify">Verify</string>
    <string name="new_user_helper_text">Don\'t have an account?</string>
    <string name="sign_up">Sign up</string>
    <string name="indicates_required_field">* indicates required field</string>
    <string name="username_2">Username:</string>
    <string name="log_out">Log out</string>
    <string name="save">save</string>
    <string name="delete">delete</string>
    <string name="register">Register</string>
    <string name="create_account">Create account</string>
    <string name="email">Email</string>
    <string name="categories">Categories</string>
    <string name="shared_pref_file_key">com.example.standapp.PREFERENCE_FILE_KEY</string>
    <string name="revenue">Total revenue:</string>
    <string name="promotion">Promotion</string>
    <string name="price_promotion">Price promotion</string>
    <string name="only_active_orders">Only active orders</string>
</resources>