<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/order_number"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:text="@string/hash_tag"
        android:layout_marginStart="25dp"
        style="@style/TextAppearance.AppCompat.Body1"
        android:textSize="20sp"/>

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/status_toggle_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:singleSelection="true"
        app:selectionRequired="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_done"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/done"
            style="?attr/materialButtonOutlinedStyle"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_picked_up"
            android:focusable="false"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/picked_up"
            style="?attr/materialButtonOutlinedStyle"/>

    </com.google.android.material.button.MaterialButtonToggleGroup>

</LinearLayout>