<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="5dp">

    <RelativeLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:layout_gravity="center">

        <LinearLayout
            android:id="@+id/first_row"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="5dp">

            <TextView
                android:id="@+id/menu_item_name"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/menu_item_name"
                style="@style/TextAppearance.MaterialComponents.Headline6"/>

            <TextView
                android:id="@+id/menu_item_euro_sign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/euro_sign"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/menu_item_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/menu_item_price"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/first_row"
            android:paddingTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:text="@string/in_stock"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

            <TextView
                android:id="@+id/menu_item_stock"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hash_tag"
                style="@style/TextAppearance.MaterialComponents.Body1"/>

        </LinearLayout>

    </RelativeLayout>

    <com.google.android.material.button.MaterialButton
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/edit_menu_item_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton.Icon"
        app:icon="@drawable/ic_edit2_black_24dp"
        android:layout_gravity="center"/>

</LinearLayout>